storage times working

--- a/linear_packet_switched_network_varying_guard_time_and_interval.ipynb
+++ b/linear_packet_switched_network_varying_guard_time_and_interval.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmdqzg98x99fiKd25ln4F7"
+      "authorship_tag": "ABX9TyM86dkvDdw5vV2vzxPV6UOY"
     },
     "kernelspec": {
       "name": "python3",
@@ -69,7 +69,7 @@
         "    def update_time_in_queue(self, time_in_queue):\n",
         "        self.time_in_queue += time_in_queue\n",
         "\n",
-        "    def update_frame_from_processing(self, pretransmission_delay, transmission_delay):\n",
+        "    def update_frame_from_processing(self, pretransmission_delay, frame_length_before_processing):\n",
         "        '''\n",
         "        pretransmission delay: queuing and header processing delay\n",
         "        transmission delay: temporal frame length\n",
@@ -87,8 +87,8 @@
         "        # if the guard time is 0 then the frame is in storage the whole time\n",
         "        # tramsission delay is halfed bc its the avg time part of the payload will spend in storage\n",
         "        elif round(self.guard_time,1) == 0:\n",
-        "            self.time_in_storage += (pretransmission_delay + transmission_delay / 2)\n",
-        "            print(f'FRAME {self.frame_id} TRANSMISSION DELAY:', transmission_delay)\n",
+        "            self.time_in_storage += (pretransmission_delay + frame_length_before_processing / 2)\n",
+        "            print(f'FRAME {self.frame_id} TRANSMISSION DELAY:', frame_length_before_processing)\n",
         "            print(f'FRAME {self.frame_id} PRETRANSMISSION DELAY:', pretransmission_delay)\n",
         "            self.num_times_entered_storage += 1\n",
         "\n",
@@ -96,12 +96,12 @@
         "        # becomes zero and the packet is in storage after the guard time is used up\n",
         "        elif self.guard_time < pretransmission_delay:\n",
         "            self.temporal_frame_length -= self.guard_time\n",
-        "            self.time_in_storage += (pretransmission_delay - self.guard_time + transmission_delay / 2)\n",
-        "            print(f'FRAME {self.frame_id}, GUARD TIME {self.guard_time}')\n",
+        "            self.time_in_storage += (pretransmission_delay - self.guard_time + self.temporal_frame_length / 2)\n",
         "            #print(f'FRAME {self.frame_id} TRANSMISSION DELAY:', transmission_delay)\n",
         "            #print(f'FRAME {self.frame_id} PRETRANSMISSION DELAY:', pretransmission_delay)\n",
         "            self.num_times_entered_storage += 1\n",
         "            self.guard_time = 0\n",
+        "            print(f'FRAME {self.frame_id}, GUARD TIME {self.guard_time}')\n",
         "\n",
         "\n",
         "        # checking if storage time limit has been reached\n",
@@ -141,10 +141,12 @@
         "\n",
         "                    # update the frame with the total delay time at this node\n",
         "                    total_preprocessing_delay = NetworkNode.header_processing + time_in_queue\n",
-        "                    transmission_delay = frame.temporal_frame_length\n",
         "\n",
-        "                    yield self.env.timeout(transmission_delay)\n",
-        "                    frame.update_frame_from_processing(total_preprocessing_delay, transmission_delay)\n",
+        "                    frame_length_before_processing = frame.temporal_frame_length\n",
+        "                    frame.update_frame_from_processing(total_preprocessing_delay, frame_length_before_processing)\n",
+        "\n",
+        "                    frame_length_after_processing = frame.temporal_frame_length\n",
+        "                    yield self.env.timeout(frame_length_after_processing)\n",
         "\n",
         "                    if frame.status == 'discarded':\n",
         "                        if print_status:\n",
@@ -322,10 +324,10 @@
         "# Main code to run the simulation\n",
         "\n",
         "max_packets = 3  # Number of packets to generate and process\n",
-        "interval = 1  # Time interval between packet generations\n",
-        "num_nodes = 3  # Number of nodes in the linear graph\n",
+        "interval = 2  # Time interval between packet generations\n",
+        "num_nodes = 4  # Number of nodes in the linear graph\n",
         "sender = 0  # Index of the sender node\n",
-        "receiver = 2  # Index of the receiver node\n",
+        "receiver = 3  # Index of the receiver node\n",
         "probability = 0.9  # Probability of a packet being 'in transit'\n",
         "\n",
         "frame_stats, simulation_time = run_simulation(max_packets, interval, num_nodes, sender, receiver, print_status=True)\n",
@@ -335,6 +337,7 @@
         "    print(f\"Frame {frame_id}:\")\n",
         "    print(f\"  Time in memory: {stats['time_in_memory']}\")\n",
         "    print(f\"  Time in queue: {stats['time_in_queue']}\")\n",
+        "    print(f\" times_entered_memory' {stats['times_entered_memory']}\")\n",
         "\n"
       ],
       "metadata": {
@@ -342,59 +345,76 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D6KDvtW26GHP",
-        "outputId": "1c16002c-b0cf-415f-d9c7-00ff3e959906"
+        "outputId": "74ee7dce-c11b-4562-a77b-ed1bdd72ead2"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Time 1: Frame 1 created at Node_0, destined for Node_2\n",
-            "Time 1: Frame 1 spent 0 time units in queue at Node_0\n",
+            "Time 2: Frame 1 created at Node_0, destined for Node_3\n",
+            "Time 2: Frame 1 spent 0 time units in queue at Node_0\n",
             "\n",
-            "Time 1: Frame 1 forwarded from Node_0 to Node_1\n",
-            "Time 1: Frame 1 spent 0 time units in queue at Node_1\n",
-            "\n",
-            "Time 2: Frame 2 created at Node_0, destined for Node_2\n",
-            "Time 2: Frame 2 spent 0 time units in queue at Node_0\n",
-            "\n",
-            "Time 2: Frame 2 forwarded from Node_0 to Node_1\n",
-            "\n",
-            "Time 3: Frame 3 created at Node_0, destined for Node_2\n",
-            "Time 3: Frame 3 spent 0 time units in queue at Node_0\n",
-            "\n",
-            "Time 3: Frame 3 forwarded from Node_0 to Node_1\n",
+            "Time 2: Frame 1 forwarded from Node_0 to Node_1\n",
+            "Time 2: Frame 1 spent 0 time units in queue at Node_1\n",
             "FRAME 1, GUARD TIME 3\n",
             "\n",
-            "Time 5: Frame 1 forwarded from Node_1 to Node_2\n",
-            "Time 5: Frame 2 spent 3 time units in queue at Node_1\n",
-            "Time 5: Frame 1 spent 0 time units in queue at Node_2\n",
-            "FRAME 2, GUARD TIME 0\n",
+            "Time 4: Frame 2 created at Node_0, destined for Node_3\n",
+            "Time 4: Frame 2 spent 0 time units in queue at Node_0\n",
+            "\n",
+            "Time 4: Frame 2 forwarded from Node_0 to Node_1\n",
+            "\n",
+            "Time 6: Frame 3 created at Node_0, destined for Node_3\n",
+            "\n",
+            "Time 6: Frame 1 forwarded from Node_1 to Node_2\n",
+            "Time 6: Frame 2 spent 2 time units in queue at Node_1\n",
+            "FRAME 2, GUARD TIME 1\n",
+            "Time 6: Frame 3 spent 0 time units in queue at Node_0\n",
+            "Time 6: Frame 1 spent 0 time units in queue at Node_2\n",
+            "\n",
+            "Time 6: Frame 3 forwarded from Node_0 to Node_1\n",
             "FRAME 1, GUARD TIME 3\n",
-            "Time 9: Frame 1 delivered at Node_2, from Node_0 to Node_2\n",
             "\n",
-            "Time 9: Frame 2 forwarded from Node_1 to Node_2\n",
-            "Time 9: Frame 3 spent 6 time units in queue at Node_1\n",
-            "Time 9: Frame 2 spent 0 time units in queue at Node_2\n",
+            "Time 8: Frame 2 forwarded from Node_1 to Node_2\n",
+            "Time 8: Frame 3 spent 2 time units in queue at Node_1\n",
+            "FRAME 3, GUARD TIME 1\n",
+            "\n",
+            "Time 10: Frame 1 forwarded from Node_2 to Node_3\n",
+            "\n",
+            "Time 10: Frame 3 forwarded from Node_1 to Node_2\n",
+            "Time 10: Frame 2 spent 2 time units in queue at Node_2\n",
             "FRAME 2, GUARD TIME 0\n",
-            "Time 10: Frame 2 delivered at Node_2, from Node_0 to Node_2\n",
-            "FRAME 3, GUARD TIME 3\n",
+            "Time 10: Frame 1 spent 0 time units in queue at Node_3\n",
+            "FRAME 1, GUARD TIME 3\n",
             "\n",
-            "Time 13: Frame 3 forwarded from Node_1 to Node_2\n",
-            "Time 13: Frame 3 spent 0 time units in queue at Node_2\n",
+            "Time 11: Frame 2 forwarded from Node_2 to Node_3\n",
+            "Time 11: Frame 3 spent 1 time units in queue at Node_2\n",
             "FRAME 3, GUARD TIME 0\n",
-            "Time 14: Frame 3 delivered at Node_2, from Node_0 to Node_2\n",
+            "\n",
+            "Time 12: Frame 3 forwarded from Node_2 to Node_3\n",
+            "Time 14: Frame 1 delivered at Node_3, from Node_0 to Node_3\n",
+            "Time 14: Frame 2 spent 3 time units in queue at Node_3\n",
+            "FRAME 2 TRANSMISSION DELAY: 1\n",
+            "FRAME 2 PRETRANSMISSION DELAY: 3\n",
+            "Time 15: Frame 2 delivered at Node_3, from Node_0 to Node_3\n",
+            "Time 15: Frame 3 spent 3 time units in queue at Node_3\n",
+            "FRAME 3 TRANSMISSION DELAY: 1\n",
+            "FRAME 3 PRETRANSMISSION DELAY: 3\n",
+            "Time 16: Frame 3 delivered at Node_3, from Node_0 to Node_3\n",
             "Frame 1:\n",
             "  Time in memory: 0\n",
             "  Time in queue: 0\n",
+            " times_entered_memory' 0\n",
             "Frame 2:\n",
-            "  Time in memory: 0\n",
-            "  Time in queue: 3\n",
-            "Frame 3:\n",
             "  Time in memory: 5.0\n",
-            "  Time in queue: 6\n"
+            "  Time in queue: 7\n",
+            " times_entered_memory' 2\n",
+            "Frame 3:\n",
+            "  Time in memory: 3.5\n",
+            "  Time in queue: 6\n",
+            " times_entered_memory' 1\n"
           ]
         }
       ]
