before updating grid structure

--- a/entanglement_based_networks.ipynb
+++ b/entanglement_based_networks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZrwEdVVnEhlAy0CG4c+jQ"
+      "authorship_tag": "ABX9TyNMoZZ2XDTZltF5APHSsBtj"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,7 +23,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hCLw_c79x5R9",
-        "outputId": "ce0fcfea-73a1-4db4-cc21-e86c2b9bb421"
+        "outputId": "de5e6cce-4fa8-4208-d4ce-948e1361b969"
       },
       "outputs": [
         {
@@ -40,7 +40,7 @@
             "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n",
             "Downloading simpy-4.1.1-py3-none-any.whl (27 kB)\n",
             "Downloading qutip-5.0.3.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (28.0 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m21.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m19.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: simpy, qutip\n",
             "Successfully installed qutip-5.0.3.post1 simpy-4.1.1\n"
           ]
@@ -135,6 +135,7 @@
         "        self.time_elapsed = 0\n",
         "        self.grid = grid\n",
         "        self.grid.reserve_path(self.path, self.communication_id % len(shades_of_red)) # cycle through shades of red when reserving path\n",
+        "        self.rho =\n",
         "\n",
         "    def advance(self):\n",
         "        \"\"\"\n",
@@ -274,9 +275,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "ff97661b-e3ea-4b8c-9e7d-6304634bdaea"
+        "outputId": "20c8ec3f-24c4-4230-f1ba-0b9d1f386d4f"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
